refactor: migrate to rootless container with almaLinux base
- Update Dockerfile to use AlmaLinux 9 minimal base
- Remove root dependencies and modify file permissions
- Simplify SSL ciphers and update supervisor configuration
- Add helm chart support and update README documentation

--- a/files/ecr.ini
+++ b/files/ecr.ini
@@ -1,9 +1,11 @@
 [supervisord]
 nodaemon=true
+pidfile=/supervisor/run/supervisord.pid
+logfile=/supervisor/logs/supervisord.log
+childlogdir=/supervisor/logs
 
 [program:nginx]
 command = nginx -g "daemon off;"
-user = root
 stderr_logfile_maxbytes=0
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -11,6 +13,9 @@ stdout_logfile=/dev/stdout
 autostart = true
 
 [program:crond]
-command = crond -f
-user = root
+command = /scripts/setup-cron.sh
+stderr_logfile_maxbytes=0
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
 autostart = true
