--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -1,4 +1,5 @@
-user  nginx;
+	
+pid /supervisor/run/nginx.pid;
 worker_processes  1;
 
 events {
@@ -24,13 +25,13 @@ http {
   init_by_lua_block {
     require "cjson"
 
-    local token_file = io.open('/usr/local/openresty/nginx/token.txt', 'r')
+    local token_file = io.open('/tmp/token', 'r')
     if token_file then
         local data = token_file:read()
         ngx.shared.token_dict:set("ecr_token", data)
         token_file:close()
     else
-        ngx.log(ngx.ERR, "Failed to open token file: /usr/local/openresty/nginx/token.txt")
+        ngx.log(ngx.ERR, "Failed to open token file: /tmp/token")
     end
   }
 
